--- a/sites/all/modules/xmlsitemap/translations/xmlsitemap.de.po
+++ b/sites/all/modules/xmlsitemap/translations/xmlsitemap.de.po
@@ -1,317 +1,324 @@
-# $Id: xmlsitemap.pot,v 1.2.2.9 2009/07/29 21:04:57 hass Exp $
+# $Id: xmlsitemap.de.po,v 1.1.2.5 2009/07/29 21:09:40 hass Exp $
 #
-# LANGUAGE translation of Drupal (root)
+# LANGUAGE translation of Drupal (gsitemap.module)
 # Copyright YEAR NAME <EMAIL@ADDRESS>
 # Generated from files:
-#  xmlsitemap.admin.inc,v 1.1.4.2 2009/06/22 15:06:06 earnie
-#  xmlsitemap.pages.inc,v 1.1.4.4 2009/07/02 14:20:24 earnie
-#  xmlsitemap.module,v 1.20.2.66 2009/06/23 11:54:41 earnie
-#  xmlsitemap.info,v 1.2.2.6 2009/06/22 15:06:06 earnie
-#  xmlsitemap_engines.info,v 1.2.2.3 2009/05/05 21:53:44 earnie
-#  xmlsitemap_node.module,v 1.19.2.128 2009/07/24 18:03:38 earnie
-#  xmlsitemap_node.info,v 1.2.2.4 2009/05/05 21:53:44 earnie
-#  xmlsitemap_taxonomy.module,v 1.1.2.19 2009/07/16 12:56:04 earnie
-#  xmlsitemap_taxonomy.info,v 1.1.2.2 2009/05/07 17:10:35 kiam
-#  xmlsitemap_user.module,v 1.12.2.106 2009/07/16 12:56:04 earnie
-#  xmlsitemap_user.info,v 1.2.2.4 2009/05/05 21:53:44 earnie
-#  xmlsitemap.install,v 1.5.2.50 2009/07/16 13:35:22 earnie
+#  gsitemap.module,v 1.56.2.7 2007/03/18 21:55:39 darrenoh
+#  gsitemap.info,v 1.3.2.3 2007/02/13 15:57:06 darrenoh
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PROJECT VERSION\n"
+"Project-Id-Version: German translation of xmlsitemap\n"
 "POT-Creation-Date: 2009-07-29 23:02+0200\n"
-"PO-Revision-Date: YYYY-mm-DD HH:MM+ZZZZ\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2009-07-29 23:05+0100\n"
+"Last-Translator: Alexander Haß\n"
+"Language-Team: Alexander Hass\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: German\n"
+"X-Poedit-Country: GERMANY\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: xmlsitemap.admin.inc:25
 msgid "Settings"
-msgstr ""
+msgstr "Einstellungen"
 
 #: xmlsitemap.admin.inc:31
 msgid "Add all the links to the default language sitemap"
-msgstr ""
+msgstr "Alle Links zu der standardmäßigen Sprachsitemap hinzufügen"
 
 #: xmlsitemap.admin.inc:33
 msgid "This option will be used only when the language negotiation uses a path prefix mechanism."
-msgstr ""
+msgstr "Diese Option wird nur verwendet, wenn die Spracherkennung den Pfadpräfix-Mechanismus verwendet."
 
 #: xmlsitemap.admin.inc:37
 msgid "Cron limit"
-msgstr ""
+msgstr "Cron-Begrenzung"
 
 #: xmlsitemap.admin.inc:38
 msgid "The number of links that are updated in each pass of a <a href=\"@cron\">cron maintenance task</a>."
-msgstr ""
+msgstr "Die Anzahl von Links, die bei jedem Durchlauf einer <a href=\"@cron\">Cron-Wartungsaufgabe</a> aktualisiert werden."
 
 #: xmlsitemap.admin.inc:44
 msgid "Cache directory"
-msgstr ""
+msgstr "Cache-Verzeichnis"
 
 #: xmlsitemap.admin.inc:48
 msgid "The directory where the cache files are created; change it only if you are having problems with the default setting."
-msgstr ""
+msgstr "Das Verzeichnis in dem die Cache-Dateien erstellt werden. Dieses sollte nur geändert werden, wenn Probleme mit der standardmäßigen Einstellung auftreten."
 
 #: xmlsitemap.admin.inc:52
 msgid "Use stylesheet"
-msgstr ""
+msgstr "Stylesheet verwenden"
 
 #: xmlsitemap.admin.inc:54
 msgid "Specify a xml stylesheet for the sitemap?"
-msgstr ""
+msgstr "Ein XML-Stylesheet für die Sitemap angeben?"
 
 #: xmlsitemap.admin.inc:58
 msgid "Front page"
-msgstr ""
+msgstr "Startseite"
 
 #: xmlsitemap.admin.inc:63
 msgid "Front page change frequency"
-msgstr ""
+msgstr "Änderungsfrequenz der Startseite"
 
 #: xmlsitemap.admin.inc:64
 msgid "The change frequency associated with the front page."
-msgstr ""
+msgstr "Die mit der Startseite verknüpfte Änderungsfrequenz."
 
 #: xmlsitemap.admin.inc:76
 msgid "Front page priority"
-msgstr ""
+msgstr "Priorität der Startseite"
 
 #: xmlsitemap.admin.inc:77
 msgid "The absolute priority for the front page."
-msgstr ""
+msgstr "Die absolute Priorität für die Startseite."
 
 #: xmlsitemap.admin.inc:110
 msgid "Operations"
-msgstr ""
+msgstr "Operationen"
 
 #: xmlsitemap.admin.inc:128
 msgid "Apply"
-msgstr ""
+msgstr "Anwenden"
 
 #: xmlsitemap.pages.inc:49
 msgid "Chunk size has been updated to @chunk-size."
-msgstr ""
+msgstr "Die Paketgröße wurde auf @chunk-size aktualisiert."
 
 #: xmlsitemap.pages.inc:52
 msgid "The maximum number of allowed links has been reached."
-msgstr ""
+msgstr "Die maximale Anzahl der zulässigen Links wurde erreicht."
 
 #: xmlsitemap.pages.inc:245;270;281
 msgid "Could not create the cache file @file."
-msgstr ""
+msgstr "Die gecachte Datei @file konnte nicht erstellt werden."
 
 #: xmlsitemap.module:88
 msgid "The sitemap is located at <a href=\"@sitemap\">@sitemap</a>."
-msgstr ""
+msgstr "Die Sitemap befindet sich unter <a href=\"@sitemap\">@sitemap</a>."
 
 #: xmlsitemap.module:92
 msgid "XML sitemap automatically creates a sitemap that conforms to the <a href=\"@sitemaps.org\">sitemaps.org specification</a>. This helps search engines keep their search results up to date."
-msgstr ""
+msgstr "XML-Sitemap erzeugt automatisch eine Sitemap, die den <a href=\"@sitemaps.org\">Spezifikationen von sitemap.org</a> entspricht. Dies hilft Suchmaschinen ihre Suchergebnisse aktuell zu halten."
 
 #: xmlsitemap.module:93
 msgid "Supporting modules"
-msgstr ""
+msgstr "Unterstützende Module"
 
+# handled?
 #: xmlsitemap.module:94
+#, fuzzy
 msgid "By itself, the XML sitemap module adds only the front page of your site to the sitemap. Other types of links are handled by supporting modules."
-msgstr ""
+msgstr "Das XML-Sitemap-Modul selbst fügt nur die Startseite der Website zu der Sitemap hinzu. Andere Typen von Links werden von den unterstützenden Modulen bedient."
 
 #: xmlsitemap.module:103
 msgid "Links may be assigned a priority between 0.0 and 1.0. The default priority is 0.5. A priority of <em>Not in sitemap</em> excludes a link from the sitemap."
-msgstr ""
+msgstr "Links kann eine Priorität zwischen 0,0 und 1,0 zugewiesen werden. Die standardmäßige Priorität ist 0,5. Eine Priorität von <em>Nicht in der Sitemap</em> entfernt einen Link aus der Sitemap."
 
 #: xmlsitemap.module:104
 msgid "For more information, see the online handbook entry for <a href=\"@xmlsitemap\">XML sitemap module</a>."
-msgstr ""
+msgstr "Nähere Informationen bezüglich der Konfiguration und Anpassung gibt es auf der Handbuch-Seite zum <a href=\"@xmlsitemap\">XML-Sitemap-Modul</a>."
 
 #: xmlsitemap.module:190
 msgid "Delete the sitemap cache files"
-msgstr ""
+msgstr "Die gecachten Sitemap-Dateien löschen"
 
 #: xmlsitemap.module:194
 msgid "Flag the sitemap as requiring update"
-msgstr ""
+msgstr "Die Sitemap mit erforderlicher Aktualisierung markieren"
 
 #: xmlsitemap.module:209
 msgid "The update has been performed."
-msgstr ""
+msgstr "Die Aktualisierung wurde durchgeführt."
 
 #: xmlsitemap.module:212
 msgid "An error occurred and processing did not complete."
-msgstr ""
+msgstr "Ein Fehler ist aufgetreten und die Verarbeitung konnte nicht abgeschlossen werden."
 
 #: xmlsitemap.module:215
 msgid "Last items successfully processed:"
-msgstr ""
+msgstr "Der letzte Eintrag wurde erfolgreich verarbeitet:"
 
 #: xmlsitemap.module:235
 msgid "2000 rows"
-msgstr ""
+msgstr "2000 Zeilen"
 
 #: xmlsitemap.module:236
 msgid "1500 rows"
-msgstr ""
+msgstr "1500 Zeilen"
 
 #: xmlsitemap.module:237
 msgid "1000 rows"
-msgstr ""
+msgstr "1000 Zeilen"
 
 #: xmlsitemap.module:238
 msgid "500 rows"
-msgstr ""
+msgstr "500 Zeilen"
 
 #: xmlsitemap.module:239
 msgid "250 rows"
-msgstr ""
+msgstr "250 Zeilen"
 
 #: xmlsitemap.module:240
 msgid "100 rows"
-msgstr ""
+msgstr "100 Zeilen"
 
 #: xmlsitemap.module:241
 msgid "50 rows"
-msgstr ""
+msgstr "50 Zeilen"
 
 #: xmlsitemap.module:242
 msgid "25 rows"
-msgstr ""
+msgstr "25 Zeilen"
 
 #: xmlsitemap.module:243
 msgid "20 rows"
-msgstr ""
+msgstr "20 Zeilen"
 
 #: xmlsitemap.module:244
 msgid "15 rows"
-msgstr ""
+msgstr "15 Zeilen"
 
 #: xmlsitemap.module:245
 msgid "10 rows"
-msgstr ""
+msgstr "10 Zeilen"
 
 #: xmlsitemap.module:246
 msgid "5 rows"
-msgstr ""
+msgstr "5 Zeilen"
 
 #: xmlsitemap.module:247
 msgid "Do not process via cron"
-msgstr ""
+msgstr "Nicht mit Cron verarbeiten"
 
 #: xmlsitemap.module:312
 msgid "1.0"
-msgstr ""
+msgstr "1,0"
 
 #: xmlsitemap.module:313
 msgid "0.9"
-msgstr ""
+msgstr "0,9"
 
 #: xmlsitemap.module:314
 msgid "0.8"
-msgstr ""
+msgstr "0,8"
 
 #: xmlsitemap.module:315
 msgid "0.7"
-msgstr ""
+msgstr "0,7"
 
 #: xmlsitemap.module:316
 msgid "0.6"
-msgstr ""
+msgstr "0,6"
 
 #: xmlsitemap.module:317
 msgid "0.5"
-msgstr ""
+msgstr "0,5"
 
 #: xmlsitemap.module:318
 msgid "0.4"
-msgstr ""
+msgstr "0,4"
 
 #: xmlsitemap.module:319
 msgid "0.3"
-msgstr ""
+msgstr "0,3"
 
 #: xmlsitemap.module:320
 msgid "0.2"
-msgstr ""
+msgstr "0,2"
 
 #: xmlsitemap.module:321
 msgid "0.1"
-msgstr ""
+msgstr "0,1"
 
 #: xmlsitemap.module:322
 msgid "0.0"
-msgstr ""
+msgstr "0,0"
 
 #: xmlsitemap.module:325
 msgid "Not in sitemap"
-msgstr ""
+msgstr "Nicht in der Sitemap"
 
 #: xmlsitemap.module:328
 msgid "Default"
-msgstr ""
+msgstr "Standard"
 
-#: xmlsitemap.module:404;122 xmlsitemap.info:0;0 xmlsitemap_engines/xmlsitemap_engines.info:0 xmlsitemap_node/xmlsitemap_node.module:107;134 xmlsitemap_node/xmlsitemap_node.info:0 xmlsitemap_taxonomy/xmlsitemap_taxonomy.module:56;77 xmlsitemap_taxonomy/xmlsitemap_taxonomy.info:0 xmlsitemap_user/xmlsitemap_user.module:49;80 xmlsitemap_user/xmlsitemap_user.info:0
+#: xmlsitemap.module:404;122
+#: xmlsitemap.info:0;0
+#: xmlsitemap_engines/xmlsitemap_engines.info:0
+#: xmlsitemap_node/xmlsitemap_node.module:107;134
+#: xmlsitemap_node/xmlsitemap_node.info:0
+#: xmlsitemap_taxonomy/xmlsitemap_taxonomy.module:56;77
+#: xmlsitemap_taxonomy/xmlsitemap_taxonomy.info:0
+#: xmlsitemap_user/xmlsitemap_user.module:49;80
+#: xmlsitemap_user/xmlsitemap_user.info:0
 msgid "XML sitemap"
-msgstr ""
+msgstr "XML-Sitemap"
 
 #: xmlsitemap.module:213
 msgid "1 item successfully processed."
 msgid_plural "@count items successfully processed."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 Element wurde erfolgreich verarbeitet."
+msgstr[1] "@count Elemente wurden erfolgreich verarbeitet."
 
 #: xmlsitemap.module:174
 msgid "override node settings"
-msgstr ""
+msgstr "Beitragseinstellungen übersteuern"
 
 #: xmlsitemap.module:174
 msgid "override profile settings"
-msgstr ""
+msgstr "Profileinstellungen übersteuern"
 
 #: xmlsitemap.module:123;131
 msgid "Configure the XML sitemap."
-msgstr ""
+msgstr "Die XML-Sitemap konfigurieren."
 
 #: xmlsitemap.module:130
 msgid "Sitemap"
-msgstr ""
+msgstr "Sitemap"
 
 #: xmlsitemap.module:137
 msgid "Tools"
-msgstr ""
+msgstr "Werkzeuge"
 
 #: xmlsitemap.module:138
 msgid "Sitemap tools."
-msgstr ""
+msgstr "Sitemap-Tools."
 
 #: xmlsitemap.module:146
 msgid "Sitemap index"
-msgstr ""
+msgstr "Sitemap-Index"
 
 #: xmlsitemap.module:157
 msgid "Sitemap !number"
-msgstr ""
+msgstr "Sitemap !number"
 
+# Not literally
 #: xmlsitemap.install:507
 msgid "XML sitemap term has been deprecated in favor of XML sitemap taxonomy; enable it in the <a href=\"@modules\">modules page</a>."
-msgstr ""
+msgstr "Das Modul XML-Sitemap-Begriff wurde zugunsten von XML-Sitemap-Taxonomie abgekündigt. Dieses kann auf der <a href=\"@modules\">Modul-Seite</a> aktiviert werden."
 
-#: (duplicate) xmlsitemap.install:551 ;548
+# Useless update hook. We all know that we need delete the entire module folder on a module update and run update.php afterwards.
+#: (duplicate) xmlsitemap.install:551
+#: ;548
 msgid "You have not correctly followed the installation instructions for this module. You must make certain that the old xmlsitemap/xmlsitemap diretory is removed. The xmlsitemap/xmlsitemap/xmlsitemap.* files have been moved back to the modules root directory. The install instructions were to remove the modules/xmlsitemap directory completely before extracting the update. If you had followed that step you would have prevented this message."
 msgstr ""
 
-#: (duplicate) xmlsitemap.install:577 
+#: (duplicate) xmlsitemap.install:577
 msgid "Installation issue"
-msgstr ""
+msgstr "Installationsproblem"
 
-#: (duplicate) xmlsitemap.install:578 ;574
+# Useless update hook. We all know that we need delete the entire module folder on a module update and run update.php afterwards.
+#: (duplicate) xmlsitemap.install:578
+#: ;574
 msgid "You have not correctly followed the installation instructions for this module. You must make certain that the old xmlsitemap/xmlsitemap diretory is removed. The xmlsitemap/xmlsitemap/xmlsitemap.* files have been moved back to the modules root directory. The install instructions were to removed the modules/xmlsitemap directory completely before extracting the update. If you had followed that step you would have prevented this message."
 msgstr ""
 
 #: xmlsitemap.info:0
 msgid "Create a XML sitemap conforming to sitemaps.org specifications."
-msgstr ""
+msgstr "Erzeugt eine XML-Sitemap in Übereinstimmung mit den sitemap.org Spezifikationen."
 
